# rijksictdashboard.nl

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  rid-publiek.code-workspace
backend/: .coveragerc  .env.dummy  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Makefile  alembic.ini  docker-compose.yml  lint.sh  pyproject.toml  requirements.txt  start.sh  update_textLoader_content.sh
backend/alembic/: env.py
backend/alembic/versions/: 01aad1e940f8_missende_baten_toevoegen.py  061fbf95024d_versies_publiceren.py  0fbef8655d3d_update_database_was_wordt_lijst.py  184b3193892c_import_quantbase_data.py  1a0d6fc7b1a0_insert_data.py  28a6ba75ae93_gepubliceerde_versie_tonen_in_view.py  2a6a2e8efb39_update_project_view.py  2a7ef7f4ce8c_.py  3c823d381c61_adjust_project_view_aggregation.py  3fb8f290bbe5_import_2_update_7.py  43d08b21d647_import_2_update_5.py  54f8f9990fe9_addlockbooleans_to_updateorganisaties.py  6178c8882784_add_ministerie_table.py  72655ee53692_datamigratie_v3.py  76b8b6cfc755_view_voor_project_indicator.py  803853aa50b6_update_database_was_wordt_lijst_v2.py  862ce096f571_add_minist_id_and_func_beheerder.py  8bfda745eb0c_voeg_organisaties_toe.py  92007a2a8ebe_import_2_update_2.py  92488a2b604a_verander_indicatortitel_beleidsterrein.py  97d4891d0b44_datamigratie.py  97d667392c2c_import_2_update_6.py  bee6c47242b2_addroleusers.py  (+19 more)
backend/app/: main.py
backend/common/: database_url.py
backend/dev_db/: schema.sql
backend/performance_test/: main.py
backend/tests/: test_db.py  test_endpoints.py  test_project.py
(+318 files in other folders)
