[tool.poetry]
name = "Rijks ICT-dashboard API"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.12"
SQLAlchemy = "^2.0"
python-dotenv = "1.1.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
pandas = "2.2.3"
pyright = "^1.1.294"
xlsxwriter = "^3.0.8"
openpyxl = "3.1.5"
lxml = "5.3.1"
pytest = "8.3.5"
coverage = "^7.2.7"
pyotp = "^2.8.0"
asyncpg = "0.30.0"
pyexcel = "^0.7.0"
pyexcel-xlsx = "^0.6.0"
pyexcel-ods3 = "^0.6.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
uvicorn = "0.34.0"
email-validator = "^2.1.1"
httpx = "0.28.1"
setuptools = "78.1.0"
numpy = "2.2.4"
fuzzywuzzy = {version = "^0.18.0", extras = ["speedup"]}
pillow = "11.1.0"
diskcache = "^5.6.3"

[tool.poetry.dev-dependencies]
ruff = "0.11.2"
ipykernel = "^6.16.2"

[tool.poetry.group.dev.dependencies]
xmltodict = "0.14.2"
pillow = "11.1.0"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportDeprecated = true